new fees structure
