# src/main/kotlin/com/wutsi/platform/tenant/dto/Fee.kt
@@ -6,7 +6,9 @@ import kotlin.String
 
 public data class Fee(
     public val transactionType: String = "",
-    public val business: Boolean = false,
+    public val business: Boolean? = null,
+    public val retail: Boolean? = null,
+    public val threshold: Double = 0.0,
     public val amount: Double = 0.0,
     public val percent: Double = 0.0,
     public val applyToSender: Boolean = false
